--- a/Quarantine.Api/Properties/launchSettings.json
+++ b/Quarantine.Api/Properties/launchSettings.json
@@ -12,15 +12,15 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "graphql",
+      "launchUrl": "ui/playground",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "Quarantine.Api": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "graphql",
+      "launchBrowser": false,
+      "launchUrl": "ui/playground",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
