--- a/Quarantine.Api/Quarantine.Api.csproj
+++ b/Quarantine.Api/Quarantine.Api.csproj
@@ -5,6 +5,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="GraphQL" Version="3.0.0-preview-1490" />
+      <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="3.5.0-alpha0046" />
+      <PackageReference Include="GraphQL.Server.Transports.AspNetCore.NewtonsoftJson" Version="3.5.0-alpha0046" />
+      <PackageReference Include="GraphQL.Server.Ui.Playground" Version="3.5.0-alpha0046" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="5.2.1" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.2.1" />
